{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 54,
  "lineage": "571872f3-9589-69bd-1dd0-25dcf7c244ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_node_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06a15493f37bec180",
            "arn": "arn:aws:ec2:us-west-2:135847063936:instance/i-0700b9b90540f70e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0700b9b90540f70e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_demo_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e25f15bc0258f4e",
            "private_dns": "ip-10-0-1-157.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-54-68-209-226.us-west-2.compute.amazonaws.com",
            "public_ip": "54.68.209.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08d32f5c79a8c6698",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0993ed342d6f5e071",
            "tags": {
              "name": "dev_node"
            },
            "tags_all": {
              "name": "dev_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0131d309dfcd835f6"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_demo_auth",
            "aws_security_group.terraform_demo_sg",
            "aws_subnet.terraform_demo_public_subnet",
            "data.aws_ami.terraform_demo_server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135847063936:internet-gateway/igw-0d418b26cab1abf14",
            "id": "igw-0d418b26cab1abf14",
            "owner_id": "135847063936",
            "tags": {
              "Name": "terraform_demo_dev_igw"
            },
            "tags_all": {
              "Name": "terraform_demo_dev_igw"
            },
            "vpc_id": "vpc-07a48007e2a5af179"
          },
          "dependencies": [
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "terraform_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d418b26cab1abf14",
            "id": "r-rtb-02939c39b65368f491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02939c39b65368f49",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_demo_igw",
            "aws_route_table.terraform_demo_public_rt",
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_demo_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135847063936:route-table/rtb-02939c39b65368f49",
            "id": "rtb-02939c39b65368f49",
            "owner_id": "135847063936",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d418b26cab1abf14",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_demo_public_rt"
            },
            "tags_all": {
              "Name": "terraform_demo_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a48007e2a5af179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae23bdb8c2dd5955",
            "route_table_id": "rtb-02939c39b65368f49",
            "subnet_id": "subnet-0993ed342d6f5e071"
          },
          "dependencies": [
            "aws_route_table.terraform_demo_public_rt",
            "aws_subnet.terraform_demo_public_subnet",
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135847063936:security-group/sg-0131d309dfcd835f6",
            "description": "Allow web access to instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0131d309dfcd835f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform_dev_sg",
            "name_prefix": "",
            "owner_id": "135847063936",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07a48007e2a5af179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_demo_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135847063936:subnet/subnet-0993ed342d6f5e071",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0993ed342d6f5e071",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135847063936",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_demo_dev_public"
            },
            "tags_all": {
              "Name": "terraform_demo_dev_public"
            },
            "vpc_id": "vpc-07a48007e2a5af179"
          },
          "dependencies": [
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135847063936:vpc/vpc-07a48007e2a5af179",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a4ac68dd865f4c8",
            "default_route_table_id": "rtb-0d987bc3cdf9d74ea",
            "default_security_group_id": "sg-0fdfb5f6a3eda16c8",
            "dhcp_options_id": "dopt-08cf02d5ccff07887",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a48007e2a5af179",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d987bc3cdf9d74ea",
            "owner_id": "135847063936",
            "tags": {
              "Name": "terraform_demo_dev_vpc"
            },
            "tags_all": {
              "Name": "terraform_demo_dev_vpc"
            }
          }
        }
      ]
    }
  ]
}